fixed spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,8 +11,8 @@
 }
 
 @media (min-width: 375px) {
-  .scale-2_1 {
-    transform: scale(2.1);
+  .scale-375 {
+    transform: scale(2.3);
   }
 
   .scale-5_8 {
@@ -30,25 +30,43 @@
 }
 
 @media (min-width: 640px) {
-  .scale-bg2 {
-    transform: scale(1);
+  .scale-640 {
+    transform: scale(1.35);
+  }
+}
+
+@media (min-width: 768px) {
+  .scale-768 {
+    transform: scale(1.2);
+  }
+
+  .height-768 {
+    height: 470px;
   }
 }
 
 @media (min-width: 1024px) {
+  .scale-1024 {
+    transform: scale(1.3);
+  }
+
   .height-bg2 {
-    height: 550px;
+    height: 680px;
   }
 }
 
 @media (min-width: 1280px) {
+  .scale-1280 {
+    transform: scale(1.15);
+  }
+
   .height-bg3 {
-    height: 700px;
+    height: 750px;
   }
 }
 
 @media (min-width: 1650px) {
-  .scale-bg1 {
+  .scale-1650 {
     transform: scale(1.1);
   }
 
